# WC-Path-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Path tracer.sln  README.md
Path tracer/: Editor.h  Geometry.h  Globals.h  Path tracer.vcxproj  Path tracer.vcxproj.filters  Scene.h  extern.cpp  imgui.ini  main.cpp
Path tracer/Editor/: Editor.cpp  Editor.h
Path tracer/Math/: Camera.cpp  Camera.h  Splines.cpp  Splines.h
Path tracer/Renderers/: PathTracingRenderer.cpp  PathTracingRenderer.h
Path tracer/Rendering/: AssetManager.h  CommandEncoder.h  Font.cpp  Font.h  RenderData.cpp  RenderData.h  Renderer2D.cpp  Renderer2D.h  Rendergraph.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
Path tracer/Rendering/vk/: Buffer.h  Commands.h  Image.cpp  Image.h  SyncContext.cpp  SyncContext.h  Synchronization.h  VulkanContext.cpp  VulkanContext.h
Path tracer/UI/: Widgets.cpp  Widgets.h
Path tracer/Utils/: FileDialogs.cpp  FileDialogs.h  Log.h  Time.h  YAML.h
Path tracer/assets/shaders/: imgui.frag  imgui.vert
Path tracer/imgui_backend/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
Path tracer/include/imgui/: imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_tables.cpp  imgui_widgets.cpp
Path tracer/include/stb_image/: stb_image.h
Path tracer/include/wc/: Framebuffer.h  Shader.h  Texture.h
Path tracer/include/wc/Math/: Camera.h
Path tracer/include/wc/Utils/: CPUImage.h  FileDialogs.h  List.h  Log.h  Time.h  Window.h  YAML.h
Path tracer/include/wc/vk/: Buffer.h  Commands.h  Descriptors.h  Images.h  Pipeline.h  SyncContext.h  Synchronization.h  VulkanContext.h
Path tracer/shaders/: Line.frag  Renderer2D.frag  chromaticAberration.comp  composite.comp  pathTracer.comp
Path tracer/shaders/include/: Math.glsl  Random.glsl  TonemapFunctions.glsl
Path tracer/src/: Application.h  CommandParser.h  Editor.h  Geometry.h  Globals.h  Scene.h  main.cpp
Path tracer/src/UI/: Widgets.h
Path tracer/workdir/: imgui.ini
Path tracer/workdir/assets/shaders/: imgui.frag  imgui.vert
modules/ImGui2/: backend_glfw.jai  backend_vulkan.jai  imgui.jai  module.jai
modules/ImGuizmo/: module.jai
modules/ImGuizmo/windows/: ImGuizmo.lib
modules/VKUtils/: Buffer.jai  Debugging.jai  Descriptors.jai  Image.jai  Pipeline.jai  Swapchain.jai  Synchronization.jai  module.jai
run_tree/data/: imgui.ini
src/: BufferManager.jai  ModelLoader.jai  PathTracingRenderer.jai  RenderData.jai  Renderer2D.jai  app.jai  build.jai  editor.jai  main.jai  ui_utils.jai  utilityProcedures.jai  window.jai
src/shaders/: Line.frag  Line.vert  imgui.vert  pathTracer.comp
src/shaders/include/: Geometry.glsl  Random.glsl  TonemapFunctions.glsl  constants.glsl
